# graph-query-proxying-app

./: .env.example  .gitignore  SPEC.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  models.py
backend/app/query/: executor.py  validator.py
backend/app/routes/: query.py  schema.py
backend/tests/: test_parse_return_columns.py
postgres/init/: 01_setup_age.sql  02_users.sh  03_data.sql
